エクスポート周りの修正
