# src/api/src/apis/exportApi/exportApplication.ts
@@ -11,15 +11,32 @@ export const exportApplication: ExportApi.exportApplication = async ({
   const underScore  ='_';
   const xlsx = '.xlsx';
 
+const projectTypeLabelMap: Record<string, string> = {
+  N: '新規開発',
+  E: '改良追加',
+  R: '再開発',
+};
+
+const ipaValueTypeLabelMap: Record<string, string> = {
+  M: '中央値',
+  A: '平均値',
+};
+
+const updateTypeLabelMap: Record<string, string> = {
+  I: '内部論理ファイル',
+  E: '外部インターフェースファイル',
+}
+
+
   const owb = new Excel.Workbook();
-  await owb.xlsx.readFile('templates/sample.xlsx');
+  await owb.xlsx.readFile('templates/template.xlsx');
   const ows = owb.getWorksheet(1) // 1番目のシートを取得;
   if (!ows) throw new Error('シートが見つかりません');
   // 共通項目シート
   ows.getCell(`C2`).value = exportApplicationRequest.projectName || '';
   ows.getCell(`C4`).value = exportApplicationRequest.productivityFPPerMonth || '';
-  ows.getCell(`C5`).value = exportApplicationRequest.projectType || '';
-  ows.getCell(`C6`).value = exportApplicationRequest.ipaValueType || 0;
+  ows.getCell(`C5`).value = projectTypeLabelMap[exportApplicationRequest.projectType ?? ''] ?? '';
+  ows.getCell(`C6`).value = ipaValueTypeLabelMap[exportApplicationRequest.ipaValueType ?? ''] ?? '';
   ows.getCell(`C7`).value = exportApplicationRequest.totalFP || 0;
   ows.getCell(`C8`).value = exportApplicationRequest.totalManMonths || 0;
   ows.getCell(`C9`).value = exportApplicationRequest.standardDurationMonths || 0;
@@ -30,17 +47,23 @@ export const exportApplication: ExportApi.exportApplication = async ({
   ows.getCell(`F12`).value = exportApplicationRequest.processRatios?.integrationTest || 0;
   ows.getCell(`G12`).value = exportApplicationRequest.processRatios?.systemTest || 0;
   
-  ows.getCell(`C13`).value = exportApplicationRequest.processManMonths?.basicDesign || 0;
-  ows.getCell(`D13`).value = exportApplicationRequest.processManMonths?.detailedDesign || 0;
-  ows.getCell(`E13`).value = exportApplicationRequest.processManMonths?.implementation || 0;
-  ows.getCell(`F13`).value = exportApplicationRequest.processManMonths?.integrationTest || 0;
-  ows.getCell(`G13`).value = exportApplicationRequest.processManMonths?.systemTest || 0;  
+  ows.getCell(`C13`).value = exportApplicationRequest.processFPs?.basicDesign || 0;
+  ows.getCell(`D13`).value = exportApplicationRequest.processFPs?.detailedDesign || 0;
+  ows.getCell(`E13`).value = exportApplicationRequest.processFPs?.implementation || 0;
+  ows.getCell(`F13`).value = exportApplicationRequest.processFPs?.integrationTest || 0;
+  ows.getCell(`G13`).value = exportApplicationRequest.processFPs?.systemTest || 0;  
   
-  ows.getCell(`C14`).value = exportApplicationRequest.processDurations?.basicDesign || 0;
-  ows.getCell(`D14`).value = exportApplicationRequest.processDurations?.detailedDesign || 0;
-  ows.getCell(`E14`).value = exportApplicationRequest.processDurations?.implementation || 0;
-  ows.getCell(`F14`).value = exportApplicationRequest.processDurations?.integrationTest || 0;
-  ows.getCell(`G14`).value = exportApplicationRequest.processDurations?.systemTest || 0; 
+  ows.getCell(`C14`).value = exportApplicationRequest.processManMonths?.basicDesign || 0;
+  ows.getCell(`D14`).value = exportApplicationRequest.processManMonths?.detailedDesign || 0;
+  ows.getCell(`E14`).value = exportApplicationRequest.processManMonths?.implementation || 0;
+  ows.getCell(`F14`).value = exportApplicationRequest.processManMonths?.integrationTest || 0;
+  ows.getCell(`G14`).value = exportApplicationRequest.processManMonths?.systemTest || 0;  
+  
+  ows.getCell(`C15`).value = exportApplicationRequest.processDurations?.basicDesign || 0;
+  ows.getCell(`D15`).value = exportApplicationRequest.processDurations?.detailedDesign || 0;
+  ows.getCell(`E15`).value = exportApplicationRequest.processDurations?.implementation || 0;
+  ows.getCell(`F15`).value = exportApplicationRequest.processDurations?.integrationTest || 0;
+  ows.getCell(`G15`).value = exportApplicationRequest.processDurations?.systemTest || 0; 
 
   const dws = owb.getWorksheet(2) // 2番目のシートを取得;
   const dataStartRow = 3;
@@ -50,9 +73,8 @@ export const exportApplication: ExportApi.exportApplication = async ({
   dataFunctions.forEach((row, index) => {
     if (!dws) return;
     const excelRow = dataStartRow + index;
-
       dws.getCell(`B${excelRow}`).value = dataFunctions?.[index]?.name || '';
-      dws.getCell(`C${excelRow}`).value = dataFunctions?.[index]?.updateType || '';
+      dws.getCell(`C${excelRow}`).value = updateTypeLabelMap[dataFunctions?.[index]?.updateType ?? ''] ?? '';;
       dws.getCell(`D${excelRow}`).value = dataFunctions?.[index]?.fpValue || '';
       dws.getCell(`E${excelRow}`).value = dataFunctions?.[index]?.remarks || '';
   });
@@ -64,7 +86,6 @@ export const exportApplication: ExportApi.exportApplication = async ({
   transactionFunctions.forEach((row, index) => {
     if (!tws) return;
     const excelRow = dataStartRow + index;
-
       tws.getCell(`B${excelRow}`).value = transactionFunctions?.[index]?.name || '';
       tws.getCell(`C${excelRow}`).value = transactionFunctions?.[index]?.externalInput || '';
       tws.getCell(`D${excelRow}`).value = transactionFunctions?.[index]?.externalOutput || '';
@@ -89,7 +110,6 @@ export const exportApplication: ExportApi.exportApplication = async ({
   .replace(/:/g, "")
   .replace(/ /g, "");
 
-  console.log(currentDate); // eslint-disable-line no-console
   const prjName = exportApplicationRequest.projectName;
 
   let fileName = 'exportApplication.xlsx';
